# lightning-payjoin-kit

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  README.md  SECURITY.md  docker-compose.yml
docs/: ARCHITECTURE.md  RESEARCH.md  ROADMAP.md
src/: error.rs  lib.rs
src/chain/: broadcaster.rs  corepc.rs  mock.rs  mod.rs
src/directory/: client.rs  mock.rs  mod.rs
src/funding/: mod.rs  mode.rs  orchestrator.rs  state.rs
src/lightning/: funder.rs  funding_script.rs  ldk.rs  mod.rs  simulated.rs
src/payjoin/: mod.rs  payload.rs  session.rs  validator.rs
src/psbt/: builder.rs  finalize.rs  mod.rs
src/wallet/: memory.rs  mod.rs  traits.rs
tests/: broadcast.rs  corepc_regtest.rs  counterparty_validator.rs  directory_flow.rs  fallback.rs  ldk_adapter.rs  ldk_two_node_harness.rs  lightning_handoff.rs  privacy_input_flow.rs  privacy_input_mode.rs  proposal_validator.rs  psbt_roundtrip.rs  simulated_channel.rs  simulated_lightning_funding.rs
