[package]
name = "lightning-payjoin-kit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Collaborative Payjoin-style funding primitives for Lightning channel funding research"
repository = "https://github.com/ILE-Labs/lightning-payjoin-kit"
readme = "README.md"

[features]
default = ["std"]
std = []
mock-directory = []
regtest = []
ldk = []

[dependencies]
bitcoin = { version = "0.32", default-features = false, features = ["std", "serde"] }
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"

