[package]
name = "lightning-payjoin-kit"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Collaborative Payjoin-style funding primitives for Lightning channel funding research"
repository = "https://github.com/ILE-Labs/lightning-payjoin-kit"
readme = "README.md"

[features]
default = ["std"]
std = []
mock-directory = []
regtest = []
corepc = ["dep:corepc-client"]
ldk = ["dep:lightning"]
ldk-test-utils = ["ldk", "lightning/_test_utils"]

[dependencies]
bitcoin = { version = "0.32", default-features = false, features = ["std", "serde"] }
corepc-client = { version = "0.10", default-features = false, features = ["client-sync"], optional = true }
lightning = { version = "0.2.2", default-features = false, features = ["std"], optional = true }
secp256k1 = { version = "0.29", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
